Added a bunch of mods that are named differently online

--- a/src/main/resources/.mod-meta.yml
+++ b/src/main/resources/.mod-meta.yml
@@ -1,3 +1,114 @@
 resolution-override:
   Carpet Mod: TQTTVgYE
   Iris: YL57xq9U
+  3d Skin Layers: zV5r3pPn
+  Architectury: lhGA9TYQ
+  Armor Chroma: pJnbPs9G
+  Bad Packets: ftdbN0KK
+  Beautify: DhSSvaxs
+  Bendy api: aRnIEV0F
+  Better Nether: MpzVLzy5
+  BetterCommandBlockUI: 8iQcgjQ2
+  BetterThanMending: Lvv4SHrK
+  Boat Item View Fabric: BdKIyOLe
+  Bodacious Berries: KEFyvbuH
+  Better Runtime Resource Pack (BRRP) v1: JnrDtPAE
+  Camera Overhaul: m0oRwcZx
+  Chest Tracker: ni4SrKmq
+  Clear Despawn: yoJJjRRE
+  Client Commands: 7Coz83fv
+  Cloth Config v11: 9s6osm5g
+  Companion: 4w0EzGRW
+  Controlling For Fabric: xv94TkTM
+  CoordinatesDisplay: 3mW8PdUo
+  Deepslate Cutting: IiuFShHs
+  Display Case Mod: cSIsh4gX
+  Giselbaers Durability Viewer: LTM1f0yY
+  Dynmap: fRQREgAc
+  Dynamic Music: ilfn0HT9
+  Ears: mfzaZK3Z
+  EnchantmentDescriptions: UVtY3ZAC
+  EntityCulling-Fabric: NNAgCjsB
+  Entity Texture Features: BVzZfTc1
+  Essential Client: sH0dfrKf
+  Farmer's Knives: uc3VdfLM
+  Fast Load: kCpssoSb
+  FirstpersonModel: H5XMjpHi
+  kennytv's epic force close loading screen mod for Fabric: blWBX5n1
+  FPS-Display: DIlqwRFH
+  Friends&Foes: POQ2i9zu
+  Gamma Utils: wdLuzzEP
+  Global Data- & Resourcepacks: NRLPy2mk
+  GraphUtil-Fabric: cpBmCs66
+  Grass Kiss: KelLCoVr
+  HaramClientsideCrystalRemover: HHtORZe2
+  Health Care: NNqujQWr
+  Highlighter: cVNW5lr6
+  HorseBuff: IrrG0G8l
+  Happiness is a Warm Gun: SPMW1tzD
+  Ice Boat Nerf: Udjno5eL
+  IdleTweaks: Vnjlu1sC
+  idwtialsimmoedm: ad89WlWh
+  Immersive Structures:Nether edition: fECIioDQ
+  Infinity with Mending: TToG3iVN
+  Inventory Sorter: 5ibSyLAz
+  IslandUtils: iw8lsmHb
+  ItemPhysic Lite (Fabric): OuyCgP8t
+  Jade: nvQzSEkH
+  Journeymap: lfHFW1mp
+  Kiwi Library: ufdDoWPd
+  Vinery: 1DWmBJVA
+  Lucky Blocks: 1x4VJbG6
+  Make Bubbles Pop Mod: gPCdW0Wr
+  Doom Fabric: Mfo4FiDF
+  LAN World Plug-n-Play: RTWpcTBp
+  MidnightControls Extra: WajYWUam
+  Minecraft Comes Alive: 1W98a849
+  MinecraftCapes Mod: 9gNVPfzw
+  ModernKeyBinding: rQszQPD2
+  Moonlight: twkfQtEc
+  Motion Blur: fWundlde
+  Halberd Multitool: boh1JJow
+  NBT tooltips: FZcOyh3v
+  No More Useless Keys: YCcdA1Lp
+  No Name Tag Render: GLspMh4E
+  NoRecipeBook: TvL1V8O5
+  NotEnoughAnimations: MPCX6s5C
+  Sodium Occlusion Culling Fix: jcn9RURP
+  Old Walking Animation: qPhGj08K
+  oωo: ccKDOlHs
+  Packed Up: ZbFzEauY
+  Philip`s Ruins: KdJhOYVV
+  PlayerHealthIndicators: dbu8vyp0
+  Plushie Mod: hsOK0gUP
+  Polymer (Bundled): xGdtZczs
+  Profundis: aucz7XCt
+  Replay Mod: Nv2fQJo5
+  Repurposed Structures: muf0XoRe
+  Resourcefulconfig: M1953qlQ
+  Resource Pack Options: TiF5QWZY
+  Right Click Harvest: Cnejf5xM
+  Roughly Enough Items: nfn13YXA
+  Roughly Enough Professions: V8XJ8f5f
+  Satin: fRbqPLg4
+  Simple armor hud: tJflAtvJ
+  Simple RPC: ObXSoyrn
+  Small pop: 1cfO6J6t
+  Smarter Farmers: Bh6ZOMvp
+  Snow! Real Magic!: iJNje1E8
+  Splasher: 4yIZUuyx
+  Starlight: H8CaAYZC
+  Taterzens: vE972Kux
+  TCD Commons API: Eldc1g37
+  technomodel: BX3at1x4
+  The Graveyard: QivVPB8W
+  ToolTip Fix: 2RKFTmiB
+  Vanity Slots: YTVu0oG8
+  Victus: Sy5mAKPK
+  Villagers Plus: oHGMwNDR
+  VisualOverhaul: YQnwl5Vv
+  Voxelmap: wkzK5379
+  WaveyCapes: kYuIpRLv
+  WhereIsIt: FCTyEqkn
+  wthit: 6AQIaxuO
+  YOSBR: WwbubTsV
